log
Thu 11 May 2023 04:10:06 PM UTC: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
559fa05
Thu 11 May 2023 04:11:12 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:34:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   34 |   return (*(pq->heapArray)).data;
      |          ~~~~~~~~~~~~~~~~~~^~~~~
heap.c:32:6: note: declared here
   32 | void heap_pop(Heap* pq){
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
91f8521
Thu 11 May 2023 04:11:28 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
bb3876c
Thu 11 May 2023 04:12:39 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
76f6c29
Thu 11 May 2023 04:13:13 PM UTC: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:7: error: ‘qp’ undeclared (first use in this function); did you mean ‘pq’?
   23 |   if(!qp->size) return NULL;
      |       ^~
      |       pq
heap.c:23:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
45461f0
Thu 11 May 2023 04:13:19 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
baad8a8
Thu 11 May 2023 04:24:55 PM UTC: 
 heap.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
e9a23c5
Thu 11 May 2023 04:25:42 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
d3a0cd2
Thu 11 May 2023 04:29:09 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
46908b8
Thu 11 May 2023 04:29:27 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
5124ed8
Thu 11 May 2023 04:29:50 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
e5f310e
Thu 11 May 2023 04:29:59 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
9e51252
Thu 11 May 2023 04:30:58 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 25/70
baea797
Thu 11 May 2023 04:31:15 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
c67ea5f
Thu 11 May 2023 04:33:37 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 25/70
af709d4
Thu 11 May 2023 04:34:33 PM UTC: 
 heap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  6|2
total_score: 35/70
a487055
Thu 11 May 2023 04:35:23 PM UTC: 
 heap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  6|2
total_score: 35/70
0d9f492
Thu 11 May 2023 04:37:14 PM UTC: 
 heap.c | 16 +++++++++-------
 1 file changed, 9 insertions(+), 7 deletions(-)
 tests:  3|2
total_score: 25/70
988ab54
Thu 11 May 2023 04:37:25 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
a61fa5e
Thu 11 May 2023 04:44:53 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
9fbc630
Thu 11 May 2023 04:46:33 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:52:12: error: too many arguments for format [-Werror=format-extra-args]
   52 |     printf("%dd , &d ", pq->size, pq->capac);
      |            ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a96996b
Thu 11 May 2023 04:46:38 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:52:12: error: too many arguments for format [-Werror=format-extra-args]
   52 |     printf("%d , &d ", pq->size, pq->capac);
      |            ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cf553ea
Thu 11 May 2023 04:47:23 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
98ed7a8
Thu 11 May 2023 04:54:31 PM UTC: 
 heap.c | 39 +++++++++++++++++++++++++++++++++++++++
 1 file changed, 39 insertions(+)
In file included from test.c:4:
heap.c:66:11: error: unknown type name ‘heap’; did you mean ‘Heap’?
   66 | int hijoI(heap* pq, int i){
      |           ^~~~
      |           Heap
heap.c:71:11: error: unknown type name ‘heap’; did you mean ‘Heap’?
   71 | int hijoD(heap* pq, int i){
      |           ^~~~
      |           Heap
heap.c:78:20: error: unknown type name ‘heap’; did you mean ‘Heap’?
   78 | void arreglarAbajo(heap* pq, int i){
      |                    ^~~~
      |                    Heap
heap.c: In function ‘heap_pop’:
heap.c:102:9: error: ‘pq’ is a pointer; did you mean to use ‘->’?
  102 |   if(!pq.size) return;
      |         ^
      |         ->
heap.c:103:15: error: storage size of ‘data’ isn’t known
  103 |   struct Node data;
      |               ^~~~
heap.c:108:3: error: implicit declaration of function ‘arreglarAbajo’ [-Werror=implicit-function-declaration]
  108 |   arreglarAbajo(pq, 0);
      |   ^~~~~~~~~~~~~
heap.c:103:15: error: unused variable ‘data’ [-Werror=unused-variable]
  103 |   struct Node data;
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
39dd2e3
Thu 11 May 2023 04:54:58 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘hijoI’:
heap.c:68:6: error: ‘spyhijo’ undeclared (first use in this function); did you mean ‘soyhijo’?
   68 |   if(spyhijo >= pq->capac) return -1;
      |      ^~~~~~~
      |      soyhijo
heap.c:68:6: note: each undeclared identifier is reported only once for each function it appears in
heap.c: In function ‘arreglarAbajo’:
heap.c:83:25: error: expected identifier before ‘+’ token
   83 |   if( l != -1 && (*(pq->+l)).priority > (*(h->array+i)).priority ) max = l;
      |                         ^
heap.c:83:44: error: ‘h’ undeclared (first use in this function)
   83 |   if( l != -1 && (*(pq->+l)).priority > (*(h->array+i)).priority ) max = l;
      |                                            ^
heap.c:93:5: error: implicit declaration of function ‘PercolateDown’ [-Werror=implicit-function-declaration]
   93 |     PercolateDown(h, max);
      |     ^~~~~~~~~~~~~
heap.c: In function ‘heap_pop’:
heap.c:102:9: error: ‘pq’ is a pointer; did you mean to use ‘->’?
  102 |   if(!pq.size) return;
      |         ^
      |         ->
heap.c:103:15: error: storage size of ‘data’ isn’t known
  103 |   struct Node data;
      |               ^~~~
heap.c:103:15: error: unused variable ‘data’ [-Werror=unused-variable]
cc1: all warnings being treated as errors
Compilation failed
3227951
